--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases :
     commands:
       - pip install --upgrade pip
       # Install dependencies needed for running the static analysis
-      - pip install -r requirements.txt pylint
+      - pip install -r demoproject/requirements.txt pylint
   pre_build:
     commands:
       - python --version
