--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,8 @@ phases :
   pre_build:
     commands:
       - python --version
-      - pylint $CODEBUILD_SRC_DIR/*.py
       - pylint $CODEBUILD_SRC_DIR/demoproject/*.py
+      - pylint $CODEBUILD_SRC_DIR/demoproject/demoproject/*.py
 artifacts:
    files:
     - '**/*'
