--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,8 @@ phases :
   pre_build:
     commands:
       - python --version
+      - pylint $CODEBUILD_SRC_DIR/demoproj/*.py
+
 artifacts:
    files:
     - '**/*'
