--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases :
   pre_build:
     commands:
       - python --version
-      - pylint $CODEBUILD_SRC_DIR/demoproject/*.py
+      - pylint *.py **/*.py || true
 
 artifacts:
    files:
