--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases :
   pre_build:
     commands:
       - python --version
-      - pylint *.py **/*.py || true
+      - pylint *.py **/*.py || false
 
 artifacts:
    files:
