--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases :
       - python --version
       - pylint $CODEBUILD_SRC_DIR/*.py || true
       - pylint ./**/*.py || true
-      - pylint ./*.py
+      - pylint ./*.py || true
 
 artifacts:
    files:
